# twat-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  REFACTOR_FILELIST.txt  build.sh  install.sh  md.txt  publish.sh  pyproject.toml
.github/workflows/: push.yml  release.yml
src/twat_mcp/: __init__.py
tests/: test_package.py  test_plugin.py
